<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="email_label_favorites">Favorites</string>
    <string name="email_action_new_email">New email</string>
    <string name="email_action_open_email">Open email</string>
    <string name="email_action_select_email">Select email</string>
    <string name="email_action_deselect_email">Deselect email</string>
    <string name="email_action_email_reply">Reply</string>
    <string name="email_action_email_reply_all">Reply all</string>
    <string name="email_hint_search">Search</string>
    <string name="email_action_search_collapsed">Close search</string>
    <string name="email_action_owner_info">Profile</string>
    <string name="email_msg_no_item_found">No items found</string>
    <string name="email_msg_no_search_history">No search history</string>
    <string name="email_action_favorite">Favorite</string>
    <string name="email_action_cancel_favorite">Unfavorite</string>
    <string name="email_action_delete">Delete</string>
    <string name="email_delete_confirm_title">Delete emails</string>
    <string name="email_delete_confirm_message">Selected emails: %1$d. Delete them?</string>
    <string name="email_action_cancel">Cancel</string>
    <string name="email_action_save">Save</string>
    <string name="email_action_sending">Sending...</string>
    <string name="email_label_recipients">Recipients</string>
    <string name="email_label_subject">Subject</string>
    <string name="email_label_body">Body</string>
    <string name="email_msg_recipient_required">Please select at least one recipient</string>
    <string name="email_msg_body_required">Please enter the main content.</string>
    <string name="email_msg_email_save_failed">Failed to save email</string>
    <string name="email_label_empty_subject">(No Subject)</string>
    <string name="email_time_just_now">Just now</string>
    <string name="email_msg_no_emails">No emails!</string>
</resources>
